<?xml version="1.0" encoding="utf-8"?><!--suppress ALL -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:background="#FAFAFA">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#36454F">

        <LinearLayout
            android:layout_width="200sp"
            android:layout_height="330sp"
            android:layout_marginLeft="175sp"
            android:layout_marginTop="175sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/change_step_elem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="0sp"
                android:fontFamily="sans-serif-black"
                android:text="......"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#9FE66D"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/change_water_elem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="18sp"
                android:fontFamily="sans-serif-black"
                android:text="........"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#9FE66D"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/change_cal_elem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="75sp"
                android:fontFamily="sans-serif-black"
                android:text="........"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#9FE66D"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/change_burnt_elem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="15sp"
                android:fontFamily="sans-serif-black"
                android:text="........"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#9FE66D"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/change_consm_elem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="15sp"
                android:fontFamily="sans-serif-black"
                android:text="........"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#9FE66D"
                android:textSize="30sp"
                android:textStyle="bold|italic" />


        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="15sp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/mylogo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100sp"
                android:layout_marginTop="10sp"
                android:fontFamily="monospace"
                android:text="@string/symbifit"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#F3F3F3"
                android:textSize="50sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/Home_Heading_part"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="25sp"
                android:fontFamily="monospace"
                android:text="@string/all_about_today"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/steps_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:fontFamily="sans-serif-black"
                android:text="@string/steps"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#6DEAB9"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/water_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:fontFamily="sans-serif-black"
                android:text="@string/water"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#6DEAB9"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/calorie_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:fontFamily="sans-serif-black"
                android:text="@string/calories"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#6DEAB9"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/calorie_total_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:fontFamily="sans-serif-black"
                android:text="@string/total"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#0097A7"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/calorie_burnt_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:fontFamily="sans-serif-black"
                android:text="@string/burnt"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#0097A7"
                android:textSize="25sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/calorie_consumed_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:fontFamily="sans-serif-black"
                android:text="@string/consumed"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#0097A7"
                android:textSize="25sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/input_box_heading_part"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="25sp"
                android:fontFamily="monospace"
                android:text="@string/input_box"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/consumed_head_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="275dp"
                android:layout_height="50dp"
                android:layout_marginLeft="50sp"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="128dp"
                android:background="@drawable/edy_background"
                android:elevation="6dp"
                android:hint="Consumed cal"
                android:inputType="number"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FBFBFB"
                android:textColorHint="#F6F3F3"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/burnt_head_input"
                android:layout_width="275dp"
                android:layout_height="50dp"
                android:layout_marginLeft="50sp"
                android:layout_marginTop="-100sp"
                android:layout_marginBottom="128dp"
                android:background="@drawable/edy_background"
                android:elevation="6dp"
                android:hint="Burnt cal"
                android:inputType="number"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/steps_head_input"
                android:layout_width="275dp"
                android:layout_height="50dp"
                android:layout_marginLeft="50sp"
                android:layout_marginTop="-100sp"
                android:layout_marginBottom="128dp"
                android:background="@drawable/edy_background"
                android:elevation="6dp"
                android:hint="@string/steps"
                android:inputType="number"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/water_head_input"
                android:layout_width="275dp"
                android:layout_height="50dp"
                android:layout_marginLeft="50sp"
                android:layout_marginTop="-90sp"
                android:layout_marginBottom="128dp"
                android:background="@drawable/edy_background"
                android:elevation="6dp"
                android:hint="@string/Water_input"
                android:inputType="number"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#EAEAEA"
                android:textColorHint="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/button_input_box"
                android:layout_width="275sp"
                android:layout_height="48dp"
                android:layout_marginLeft="50sp"
                android:layout_marginTop="-100sp"
                android:layout_marginBottom="128dp"
                android:background="@drawable/edt_button"
                android:elevation="6dp"
                android:text="Submit"
                android:textColor="@color/cardview_light_background" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="-100sp"
                android:fontFamily="monospace"
                android:text="Calories"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/Calorie_chart"
                android:layout_width="match_parent"
                android:layout_height="250sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="40sp"
                android:fontFamily="monospace"
                android:text="Steps"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/Steps_chart"
                android:layout_width="match_parent"
                android:layout_height="250sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="40sp"
                android:fontFamily="monospace"
                android:text="Water"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/Water_chart"
                android:layout_width="match_parent"
                android:layout_height="250sp" />


        </LinearLayout>

    </RelativeLayout>

</ScrollView>